<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewISO"
            android:padding="6dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            android:gravity="left"
            android:text="@string/iso" />

        <TextView
            android:id="@+id/textViewShutter"
            android:padding="6dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            android:gravity="left"
            android:text="@string/shutter" />

        <TextView
            android:id="@+id/textViewAperture"
            android:padding="6dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            android:gravity="left"
            android:text="@string/aperture" />

        <TextView
            android:id="@+id/textViewFocalLength"
            android:padding="6dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            android:gravity="left"
            android:text="@string/focal_length" />

        <TextView
            android:id="@+id/textViewTitleTitle"
            android:paddingLeft="6dip"
            android:paddingRight="6dip"
            android:paddingTop="16dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/title"
            android:gravity="left" />
        <TextView
            android:id="@+id/textViewTitle"
            android:paddingLeft="6dip"
            android:paddingRight="6dip"
            android:paddingTop="2dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:gravity="left" />

        <TextView
            android:id="@+id/textViewDescriptionTitle"
            android:paddingLeft="6dip"
            android:paddingRight="6dip"
            android:paddingTop="16dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/description"
            android:gravity="left" />
        <TextView
            android:id="@+id/textViewDescription"
            android:paddingLeft="6dip"
            android:paddingRight="6dip"
            android:paddingTop="2dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:gravity="left" />

        <TextView
            android:id="@+id/textViewTagsTitle"
            android:paddingLeft="6dip"
            android:paddingRight="6dip"
            android:paddingTop="16dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/tags"
            android:gravity="left" />
        <TextView
            android:id="@+id/textViewTags"
            android:paddingLeft="6dip"
            android:paddingRight="6dip"
            android:paddingTop="2dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:clickable="true"
            android:textColor="@drawable/textview_selector"
            android:gravity="left" />
    </LinearLayout>

</ScrollView>
